package nl.hu.cisq1.lingo.words.domain;

import java.util.List;

public class Game {
    private int id;
    private int score;
    private GameStatus state;
    private List<Round> rounds;

    public Game(){

    }
}
